# multi-tenant-workflows

./: .env  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  env.sh  pyproject.toml  test_e2e.py
.github/workflows/: integration.yaml  metadata.yaml  tasks-worker.yaml  tasks.yaml
api-lib/: README.md  pyproject.toml
api-lib/api_lib/: __init__.py
api-lib/api_lib/lib/: __init__.py  auth.py  custom_exceptions.py  http_clients.py  log.py  rabbit.py  responses.py
api-lib/tests/: test_rabbit.py
metadata/: Dockerfile  Dockerfile-dev  pyproject.toml
metadata/api/: logs.py  main.py  on_startup.py  settings.py
metadata/api/models/: workflow.py
metadata/tests/: conftest.py
pgadmin/: servers.json
scripts/: README.md  grafana-ingress.yaml  grafana.yaml  ingress.yaml  issuer-cluster.yaml  loki.yaml  minio.yaml  otel-collector.yaml  otel-instrument.yaml  prometheus-rbac.yaml  prometheus.yaml  promtail-rbac.yaml  promtail.yaml
scripts/cd/: build-frontend.sh  build-image.sh  deploy.sh  gke-login.sh  gke-set-namespace.sh  metadata.yaml  postgres.yaml  push-image.sh  redis.yaml  tasks-worker.yaml  tasks.yaml
tasks/: .dockerignore  Dockerfile  Dockerfile-dev  cli.py  params.json  pyproject.toml
tasks/api/: celery.py  db.py  main.py  settings.py  tasks.py
tasks/api/lib/: error_schema.py  rabbit.py
tasks/api/lib/http_clients/: __init__.py  exceptions.py  http_clients.py
tasks/api/models/: __init__.py  base.py  enums.py  job.py  params.py  workflow.py
tasks/api/routes/: job_routes.py  workflow_result_routes.py  workflow_routes.py
tasks/tests/: conftest.py  test_celery_tasks.py  test_e2e.py  test_jobs.py  test_rabbit.py  test_workflow.py
