[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "metadata"
version = "0.1.0"
dependencies = [
  "aio-pika==9.5.6",
  "asyncpg==0.30.0",
  "fastapi==0.117.1",
  "sqlalchemy[asyncio]==2.0.43",
  "passlib[bcrypt]==1.7.4",
  "pydantic==2.10.5",
  "pydantic_settings==2.9.1",
  "pydantic_core==2.27.2",
  "python-jose==3.5.0",
  "python-multipart==0.0.20",
  "uvicorn==0.36.0",
  "uvloop==0.21.0",
]

[project.optional-dependencies]
test = [
  "httpx==0.27.0",
  "asgi-lifespan==2.1.0",
  "pytest==7.4.0",
  "pytest-asyncio==0.21.1",
  "pytest-cov==4.1.0",
  "mypy==1.10.0",
  "mypy-extensions==1.0.0",
  "types-requests==2.31.0.20240406",
  "types-six==1.16.21.20240425",
  "types-pytz==2024.1.0.20240417",
  "fpdf==1.7.2",
]

[tool.hatch.build.targets.wheel]
packages = ["api"]

[tool.coverage.run]
branch = true
omit = [
    "*/.virtualenvs/*",
    "~/.virtualenvs"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.html]
directory = "coverage_report"

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = [
  "--cov=api", 
  "--cov-report=html", 
  "--tb=line", 
  "-s"]
testpaths = ["tests"]
filterwarnings = [
  "ignore::DeprecationWarning"]
markers = [
  "postgres_routes_admin: unit test postgres routes with admin user"]

[tool.mypy]
plugins = ["pydantic.mypy"]
follow_imports = "normal"
follow_imports_for_stubs = false
check_untyped_defs = true
warn_no_return = true
warn_unreachable = false
no_silence_site_packages = false
strict_optional = true
allow_redefinition = true
disable_error_code = ["import-untyped", "var-annotated", "misc"]
